AM_CFLAGS		= -DLINUX2
noinst_LTLIBRARIES	= libauxtools.la
libauxtools_la_SOURCES	= aux_lib.h data_buf.h error.h libauxtools.h mymalloc.h \
			  split_at.h tsk_endian.h tsk_os.h tsk_types.h unicode.h \
			  mymalloc.c error.c strerror.c split_at.c tsk_endian.c \
    			  unicode.c data_buf.c tsk_version.c
