AM_CFLAGS		= -DLINUX2  -include config.h 
noinst_LTLIBRARIES	= libauxtools.la
libauxtools_la_SOURCES	= aux_tools.h tsk_os.h XGetopt.h data_buf.c \
						  mymalloc.c split_at.c strerror.c tsk_endian.c \
						  tsk_error.c tsk_list.c tsk_parse.c tsk_printf.c \
						  tsk_unicode.c tsk_version.c XGetopt.c
#libauxtools_la_LIBADD 	= ../../../lib/liboo.la
